[package]
name = "mwc_wallet_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

secp256k1 = { version = "0.28", features = ["rand"] }
rand = "0.8"

hex = "0.4"
bs58 = "0.5"
bech32 = "0.8"

sha2 = "0.10"
ripemd = "0.1"
base64 = "0.22"
